// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WinnerLine Component should match snapshot when no winner 1`] = `null`;

exports[`WinnerLine Component should match the diagonal top left line snapshot 1`] = `
<DiagonalTopLeftLine
  color="red"
  height={0}
  heightAnimation={0}
  length={692.9174811988408}
  opacityAnimation={0}
  shakeAnimation={0}
/>
`;

exports[`WinnerLine Component should match the diagonal top right line snapshot 1`] = `
<DiagonalTopRightLine
  color="red"
  height={10}
  heightAnimation={0}
  length={841.5009774386089}
  opacityAnimation={0}
  shakeAnimation={0}
/>
`;

exports[`WinnerLine Component should match the horizontal line snapshot 1`] = `
<HorizontalLine
  color="red"
  heightAnimation={0}
  opacityAnimation={0}
  positionY={345}
  shakeAnimation={0}
/>
`;

exports[`WinnerLine Component should match the vertical line snapshot 1`] = `
<VerticalLine
  color="red"
  opacityAnimation={0}
  positionX={545}
  shakeAnimation={0}
  width={10}
  widthAnimation={0}
/>
`;
